# http-gameserver

./: CMakeLists.txt  README.md
data/: config.json
src/: main.cpp
src/app/: app.cpp  app.h
src/database_tools/: postgres.cpp  postgres.h
src/extra/: extra_data.cpp  extra_data.h  tagged.h
src/json_tools/: boost_json.cpp  json_loader.cpp  json_loader.h
src/model/: collision_detector.cpp  collision_detector.h  loot_generator.cpp  loot_generator.h  model.cpp  model.h
src/serialization/: app_serialization.cpp  app_serialization.h
src/web/: http_server.cpp  http_server.h  log.cpp  log.h  request_handler.cpp  request_handler.h  sdk.h  timer.h
state/: state.txt
